Tolerance for more OO ReadLine implementations, e.g. Term::ReadLine::Perl5

--- a/META.yml
+++ b/META.yml
@@ -10,7 +10,7 @@ configure_requires:
     ExtUtils::MakeMaker:  0
 build_requires:
     ExtUtils::MakeMaker:  0
-requires:  {}
+requires:  {Scalar::Util}
 no_index:
     directory:
         - t
